--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-6 my-2" style="min-width: 20em">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <div class="card mw-100">
                                     <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250578758822527046/23183387.png?ex=666d6dfa&is=666c1c7a&hm=c30d51b749e2037d87e1fa4274a9e7954d2103d4088984fab8052c7fdb6f6166&=&format=webp&quality=lossless&width=346&height=346" alt="Card image">
                                 </div>
@@ -98,7 +98,7 @@
                     
                     <div class="col-6 my-2" style="min-width: 20em">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <div class="card mw-100">
                                     <img class="card-img" src="./static/assets/johnny.jpg" alt="Card image">
                                 </div>
@@ -117,7 +117,7 @@
                 <div class="row">
                     <div class="col-6 my-2" style="min-width: 20em">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <div class="card mw-100">
                                     <img class="card-img" src="./static/assets/daniel.png" alt="Card image">
                                 </div>
@@ -126,7 +126,9 @@
                                 <p>
                                     <strong>Daniel</strong>
                                     <br>
-                                    Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of the Computer Security Club. He has competed in many competitions including winning MIT battlecode, winning 2000$ from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
+                                    Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of the Computer Security Club. 
+                                    <br><br>
+                                    He has competed in many competitions including winning MIT battlecode, winning 2000$ from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
                                 </p>
                             </div>
                         </div>
@@ -134,14 +136,21 @@
                     
                     <div class="col-6 my-2" style="min-width: 20em">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250578758822527046/23183387.png?ex=666d6dfa&is=666c1c7a&hm=c30d51b749e2037d87e1fa4274a9e7954d2103d4088984fab8052c7fdb6f6166&=&format=webp&quality=lossless&width=346&height=346" alt="Card image">
+                                    <img class="card-img" src="./static/assets/max.jpg" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
                                 <p>
-                                    <strong>Max</strong>
+                                    <strong>Max</strong><br>
+                                    Max is a rising freshman studying computer science at the University of Maryland. He is the former Co-Captain of Science Olympiad at TJ and is also an Eagle Scout of Troop 652.
+                                    <br><br>
+                                    He has extensive leadership/teaching experience from mentoring at TJ and Longfellow's Science Olympiad clubs, years of leadership in Boy Scouts, and tutoring (up to college level) on the side.
+                                    <br><br>
+                                    He has strong academic competition experience - qualifying for National Science Olympiad several times, becoming a Candidate Master on Codeforces, winning MIT Battlecode and PClassic, 3rd place at HackMIT Blueprint, and being a top competition math competitor since middle school.
+                                    <br><br>
+                                    He enjoys playing games like Tetris and Mahjong (without gambling).
                                 </p>
                             </div>
                         </div>
