--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                         </h3>
                         <p>
                             We are Thomas Jefferson High School graduates and rising college freshmen, all majoring in computer science. We have competed together in multiple competitive programming and AI competitions including Stanford's Proco, MIT's Battlecode, UPenn's PClassic, along with many others, and winning a total of over $5000.
+                            <br><br>
+                            We hope that our courses will provide an affordable way for students of any age to prepare themselves for further math and computer science learning, as well as a way to get into the lucrative field of artificial intelligence and machine learning.
                         </p>  
                     </div>
                     <div class="col-5" style="min-width:16em;">
