--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,8 @@
                     To sign up for a class, fill out 
                     <a class="link-style-1-red" href="" style="text-decoration: none;">this form</a>.
                     <br>
+                    If you are interested in tutoring, contact us via the methods listed above.
+                    <br>
                     For our instructors' contact information, see our 
                     <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">about page</a>.
                     <br>
