--- a/tutoring.html
+++ b/tutoring.html
@@ -210,7 +210,7 @@
                            <i class="h5 my-2 mx-2 bi-plus-slash-minus"></i><b>mathematics</b>
                            </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion" style="">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion">
                            <table class="table table-striped table-bordered my-0">
                               <thead class="thead-dark">
                                  <tr>
