--- a/tutoring.html
+++ b/tutoring.html
@@ -237,7 +237,7 @@
                                  </tr>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">Competitive Math (AMC8/10/12 level)</th>
-                                    <td class="py-2">Daniel, Max <span class="help-tip" data-help-tip="Qualified for AIME and ARML">?</span></td>
+                                    <td class="py-2">Daniel, Max <span class="help-tip" data-help-tip="Qualified for AIME and ARML TJ-A">?</span></td>
                                  </tr>
                               </tbody>
                            </table>
