--- a/tutoring.html
+++ b/tutoring.html
@@ -220,7 +220,7 @@
                               </thead>
                               <tbody>
                                  <tr class="table-secondary">
-                                    <th class="py-2" scope="row">Pre-Algebra - AP Calculus AB/BC</th>
+                                    <th class="py-2" scope="row">Pre-Algebra up to AP Calculus AB/BC</th>
                                     <td class="py-2">all tutors</td>
                                  </tr>
                                  <tr class="table-secondary">
