--- a/courses.html
+++ b/courses.html
@@ -142,7 +142,7 @@
 
             <div id="math-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> math</h4>
+                    <h4 class="subhead-shadow my-2" style="max-width: fit-content;">>>> math</h4>
 
                     <div class="bs-component">
                         <ul class="nav nav-tabs" role="tablist">
@@ -200,12 +200,12 @@
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 15-July 26 <br>Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
-                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 29-August 5 <br>Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
-                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -225,7 +225,7 @@
 
             <div id="cs-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> computer science</h4>
+                    <h4 class="subhead-shadow my-2" style="max-width: fit-content;">>>> computer science</h4>
 
 
                     <div class="bs-component">
@@ -270,13 +270,15 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                Python is one of the most versatile languages, commonly used in machine learning and web development. In this class, students will gain both a concrete understanding of the foundations of Python and also the problem solving skills to use code to solve different problems.
+                                                Python is one of the most versatile and widely used languages, commonly used in advanced contexts like machine learning and software development. 
+                                                In this class, students will gain both a concrete understanding of the foundations of Python and also the skills to use any language to solve different coding problems.
+                                                Students will learn concepts and practice them by writing Python to solve basic problems. 
                                                 <br><br>
-                                                This class is hands-on; students will learn concepts and then directly practice them by writing Python to solve algorithmic problems. To foster a nuanced understanding of the Python syntax, there will be friendly competition. For example, students who solve certain problems with the shortest code will earn recognition, which encourages experimentation of different techniques.
+                                                <i>
+                                                    For students with no prior experience with Python. Students should have some experience with algebra.
+                                                </i>
                                                 <br><br>
                                                 <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
-
-
                                             </p>
                                         </div>
                                     </div>
@@ -295,14 +297,14 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 15-July 26 <br>Weekdays</th>
+                                                        <th class="py-2" scope="row">July 15 - July 26 <br>All Weekdays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 29-August 5 <br>Weekdays</th>
+                                                        <th class="py-2" scope="row">July 29 - August 5 <br>All Weekdays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -315,13 +317,12 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                PREREQS:
+                                                The ability to work with sophiscated algorithms and data structures is essential to competitive programming and in most Computer Science job settings.
+                                                In this course, students will acquire the necessary skills to pass the USACO Bronze and Silver level, and be more than prepared for the AP Computer Science A course.
                                                 <br><br>
-                                                The ability to work with sophiscated algorithims and data structures is essential to competitive programming and valued in the workforce.
-                                                <br><br>
-                                                As leaders in the TJHSST Computer Team, our instructors have had extensive experience explaining these algorithms and how to apply them intuitively. 
-                                                <br><br>
-                                                Students should have prior programming experience. They will acquire the necessary skills to pass the USACO Bronze and Silver level, and be overprepared for the AP Computer Science A course.
+                                                <i>
+                                                    Students should have prior programming experience.
+                                                </i>
                                                 <br><br>
                                                 <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
@@ -340,7 +341,7 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 16-August 17 <br>Tuedays & Saturdays</th>
+                                                        <th class="py-2" scope="row">July 16 - August 17 <br>Tuedays & Saturdays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
@@ -355,17 +356,17 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                PREREQS:
+                                                Artificial Intelligence (AI) is the buzzword of the decade. 
+                                                However, few actually understand what constitutes AI. 
+                                                This course combines parts of the world-class TJHSST AI curriculum and our vast experience in adversarial AI competitions like MIT Battlecode and Correlation-One's Terminal.
+                                                We will teach students about the algorithms that form the foundation of modern artificial intelligence, from the basic DFS up to today's neural networks. 
                                                 <br><br>
-                                                Artificial Intelligence (AI) is the buzzword of the century. What actually constitutes AI? In this course, we’ll survey the origins of AI all the way to today’s neural networks.
-                                                <br><br>
-                                                This class is a synthesis of the world-class TJHSST AI curriculum and our vast experience competiting in adversarial AI competitions such as MIT Battlecode and Correlation-One's Terminal.
-
+                                                <i>
+                                                    Students taking this course should have experience with coding and knowledge of basic data structures. Taking our other courses is a good way to meet these requirements.
+                                                </i>
                                                 <br><br>
                                                 <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                                 <br><br>
-                                                Note that there is a lot to AI. It is not possible to cover it all nor give the most robust understanding in a course of this scope. That being said, this course will give students the requisite ways to think about AI vs. traditional algorithms, construct these algorithms themselves. Most AI courses give a high-level understanding of the content, using libraries that solve the problem for you. We believe it’s important to start from the foundation. 
-
                                             </p>
                                         </div>
                                     </div>
@@ -382,7 +383,7 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 18-August 18 <br>Thursdays & Sundays</th>
+                                                        <th class="py-2" scope="row">July 18 - August 18 <br>Thursdays & Sundays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
