--- a/tutoring.html
+++ b/tutoring.html
@@ -58,8 +58,8 @@
             </div>
          </div>
          <div class="container">
-            <div class="card mw-100" style="overflow: hidden; min-height: 15rem;">
-               <div id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 15rem;">
+            <div class="card mw-100" style="overflow: hidden; min-height: 8rem;">
+               <div id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 8rem;">
                   <div class="carousel-indicators" style="margin-bottom: 0.7rem;">
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
@@ -68,15 +68,19 @@
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="4" aria-label="Slide 5" class=""></button>
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="5" aria-label="Slide 6" class=""></button>
                   </div>
-                  <div class="carousel-inner" style="height: 15rem">
+                  <div class="carousel-inner" style="height: 8rem">
                      <div class="carousel-item h-100 active">
                         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                         </svg>
                         <div class="container">
-                           <div class="carousel-caption text-start">
-                              <h1>Testimonial</h1>
-                              <p class="opacity-75">Max is so orz</p>
+                           <div class="carousel-caption">
+                              <h6>
+                                 Thanks for all the help this year! I think you [Max] singlehandedly carried my grade up to an A-.
+                              </h6 >
+                              <h6 class="opacity-75">
+                                 - Anonymous, Purdue sophomore in Computer Science
+                              </h6>
                            </div>
                         </div>
                      </div>
