--- a/courses.html
+++ b/courses.html
@@ -71,7 +71,7 @@
 
                 <div class="row">
                     <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
-                    <a class="my-auto px-0" href="#" style="max-width: fit-content;">
+                    <a class="my-auto px-0" href="https://docs.google.com/forms/d/1pAu0nejf6-1tBuKn3HhyJsqm-rB2gkeNG4T4m0hO9WU/edit?pli=1" target="_blank" style="max-width: fit-content;">
                         <span class="badge badge-hover" style="background-color:#FF0000">Register Here</span>
                     </a>
                 </div>
@@ -142,7 +142,12 @@
 
             <div id="math-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-2" style="max-width: fit-content;">>>> math</h4>
+                    <div class="row">
+                        <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> math</h4>
+                        <a class="my-auto px-0" href="https://docs.google.com/forms/d/1pAu0nejf6-1tBuKn3HhyJsqm-rB2gkeNG4T4m0hO9WU/edit?pli=1" target="_blank" style="max-width: fit-content;">
+                            <span class="badge badge-hover" style="background-color:#FF0000">Register Here</span>
+                        </a>
+                    </div>
 
                     <div class="bs-component">
                         <ul class="nav nav-tabs" role="tablist">
@@ -225,8 +230,12 @@
 
             <div id="cs-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-2" style="max-width: fit-content;">>>> computer science</h4>
-
+                    <div class="row">
+                        <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> computer science</h4>
+                        <a class="my-auto px-0" href="https://docs.google.com/forms/d/1pAu0nejf6-1tBuKn3HhyJsqm-rB2gkeNG4T4m0hO9WU/edit?pli=1" target="_blank" style="max-width: fit-content;">
+                            <span class="badge badge-hover" style="background-color:#FF0000">Register Here</span>
+                        </a>
+                    </div>
 
                     <div class="bs-component">
                         <ul class="nav nav-tabs" role="tablist">
