--- a/about.html
+++ b/about.html
@@ -107,7 +107,13 @@
                                 <p>
                                     <strong>Johnny</strong>
                                     <br>
-                                    aksdlsakd;sa;dksa;dksa
+                                    Johnny is a rising freshman at the University of Texas at Austin, part of the Turing Scholars program. He is a former Co-captain of TJ’s Senior Computer Team.
+                                    <br><br>
+                                    He has a robust academic background - USACO Platinum, placing 1st/120 in TJ’s schoolwide Othello AI tournament, and winning competitive programming competitions (UPenn’s PClassic, Berkeley’s CALICO, etc.) and AI competitions (MIT Battlecode, Correlation-One Terminal) alike.
+                                    <br><br>
+                                    In addition, Johnny has extensive teaching and mentoring experience. He was the former head instructor for the robotics class at HCSTC, teaching more than 40 students, a TJ Writing Center Tutor, nominated to be a tutor spotlight, and also mentored at the FCPS Credit Recovery program.
+                                    <br><br>
+                                    He enjoys playing games like Roblox in his free time.
                                 </p>
                             </div>
                         </div>
