--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                                     <br>
                                     Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of the Computer Security Club. 
                                     <br><br>
-                                    He has competed in many competitions including winning MIT battlecode, winning 2000$ from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
+                                    He has competed in many competitions including winning MIT battlecode, winning $2000 from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
                                 </p>
                             </div>
                         </div>
