--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                                     <br><br>
                                     He has a robust academic background - USACO Platinum, placing 1st/120 in TJ’s schoolwide Othello AI tournament, and winning AI and competitive programming competitions like MIT Battlecode, UPenn’s PClassic, Berkeley’s CALICO, etc.
                                     <br><br>
-                                    In addition, Johnny has extensive teaching and mentoring experience. He was the former head instructor for the robotics class at HCSTC, teaching more than 40 students, a TJ Writing Center Tutor, nominated to be a tutor spotlight, and also mentored at the FCPS Credit Recovery program.
+                                    In addition, Johnny has extensive teaching and mentoring experience. He was the former head instructor for the robotics class at HCSTC, having taught more than 40 students, a TJ Writing Center Tutor, nominated to be a tutor spotlight, and also mentored at the FCPS Credit Recovery program.
                                     <br><br>
                                     He enjoys playing games like Roblox in his free time.
                                 </p>
