--- a/courses.html
+++ b/courses.html
@@ -186,7 +186,7 @@
                                                 
                                                 Course material covers the standard middle school Algebra curriculum and useful tips and tricks used in the AMC.  
                                                 <br><br>
-                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
                                         </div>
                                     </div>
@@ -203,12 +203,12 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 15-July 26 <br>Weekdays</th>
+                                                        <th class="py-2" scope="row">July 15 - July 26 <br>All Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 29-August 5 <br>Weekdays</th>
+                                                        <th class="py-2" scope="row">July 29 - August 5 <br>All Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
@@ -287,7 +287,7 @@
                                                     For students with no prior experience with Python. Students should have some experience with algebra.
                                                 </i>
                                                 <br><br>
-                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
                                         </div>
                                     </div>
@@ -333,7 +333,7 @@
                                                     Students should have prior programming experience.
                                                 </i>
                                                 <br><br>
-                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
                                         </div>
                                     </div>
@@ -374,7 +374,7 @@
                                                     Students taking this course should have experience with coding and knowledge of basic data structures. Taking our other courses is a good way to meet these requirements.
                                                 </i>
                                                 <br><br>
-                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                                 <br><br>
                                             </p>
                                         </div>
