--- a/tutoring.html
+++ b/tutoring.html
@@ -186,19 +186,19 @@
                            <tbody>
                               <tr class="table-secondary">
                                  <th class="py-2" scope="row">1
-                                 <td class="py-2">45$</td>
+                                 <td class="py-2">$45</td>
                               </tr>
                               <tr class="table-secondary">
                                  <th class="py-2" scope="row">2
-                                 <td class="py-2">25$</td>
+                                 <td class="py-2">$30</td>
                               </tr>
                               <tr class="table-secondary">
                                  <th class="py-2" scope="row">3
-                                 <td class="py-2">20$</td>
+                                 <td class="py-2">$25</td>
                               </tr>
                               <tr class="table-secondary">
                                  <th class="py-2" scope="row">4+
-                                 <td class="py-2">15$</td>
+                                 <td class="py-2">$20</td>
                               </tr>
                            </tbody>
                         </table>
