--- a/about.html
+++ b/about.html
@@ -85,12 +85,19 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250578758822527046/23183387.png?ex=666d6dfa&is=666c1c7a&hm=c30d51b749e2037d87e1fa4274a9e7954d2103d4088984fab8052c7fdb6f6166&=&format=webp&quality=lossless&width=346&height=346" alt="Card image">
+                                    <img class="card-img" src="./static/assets/munir_face.png" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
                                 <p>
                                     <strong>Munir</strong>
+                                    <br>
+                                    Munir is a first-year student at Purdue University.
+                                    <br><br>
+                                    Munir reached the Platinum division of the USA Computing Olympiad (USACO), and has won programming contests at UPenn and UMD. He has experience teaching as an officer of TJHSST's Senior Computer Team and as a TA for a Summer Foundations of Computer Science class.
+                                    <br><br>
+                                    Munir enjoys reading fiction and collecting riddles.
+                                    <br>
                                 </p>
                             </div>
                         </div>
