--- a/tutoring.html
+++ b/tutoring.html
@@ -303,11 +303,11 @@
                               <tbody>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">AP Chemistry</th>
-                                    <td class="py-2">Max <span class="help-tip" data-help-tip="Tutor scored 5 on the AP exam">?</span></td>
+                                    <td class="py-2">Max, Munir <span class="help-tip" data-help-tip="Tutors scored 5 on the AP exam">?</span></td>
                                  </tr>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">AP Physics C Mechanics</th>
-                                    <td class="py-2">Daniel, Max, Johnny <span class="help-tip" data-help-tip="Tutors scored 5 on the AP exam">?</span></td>
+                                    <td class="py-2">Daniel, Max, Johnny, Munir <span class="help-tip" data-help-tip="Tutors scored 5 on the AP exam">?</span></td>
                                  </tr>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">AP Physics C E&M</th>
