--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="./static/assets/johnny.png" alt="Card image">
+                                    <img class="card-img" src="./static/assets/johnny.jpg" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
