--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="./static/assets/daniel.jpg" alt="Card image">
+                                    <img class="card-img" src="./static/assets/daniel.png" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
