--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 
                 <p>
                     To sign up for a class, fill out 
-                    <a class="link-style-1-red" href="" style="text-decoration: none;">this form</a>.
+                    <a class="link-style-1-red" href="https://docs.google.com/forms/d/1pAu0nejf6-1tBuKn3HhyJsqm-rB2gkeNG4T4m0hO9WU/edit?pli=1" target="_blank" style="text-decoration: none;">this form</a>.
                     <br>
                     If you are interested in tutoring, contact us via the methods listed above.
                     <br>
