--- a/contact.html
+++ b/contact.html
@@ -79,10 +79,13 @@
                     <a class="link-style-1-red" href="https://docs.google.com/forms/d/1pAu0nejf6-1tBuKn3HhyJsqm-rB2gkeNG4T4m0hO9WU/edit?pli=1" target="_blank" style="text-decoration: none;">this form</a>.
                     <br>
                     If you are interested in tutoring, contact us via the methods listed above.
+                    <br><br>
+                    Our instructors' contact information:
                     <br>
-                    For our instructors' contact information, see our 
-                    <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">about page</a>.
-                    <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Daniel: <u>scienceqiu@gmail.com</u><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Johnny: <u>johnny.liu134@gmail.com</u><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Max: <u>maxyywang@gmail.com</u><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Munir: <u>munir.robert05@gmail.com</u>
                 </p>
             </div>
         </div>
