--- a/courses.html
+++ b/courses.html
@@ -284,7 +284,7 @@
                                                 Students will learn concepts and practice them by writing Python to solve basic problems. 
                                                 <br><br>
                                                 <i>
-                                                    For students with no prior experience with Python. Students should have some experience with algebra.
+                                                    For students with no prior experience with Python. Students should have a good grasp of pre-algebra.
                                                 </i>
                                                 <br><br>
                                                 <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
@@ -352,7 +352,7 @@
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 23 - August 17 <br>Tuedays & Saturdays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">$180</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -394,7 +394,7 @@
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 25 - August 18 <br>Thursdays & Sundays</th>
                                                         <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">$180</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
