--- a/tutoring.html
+++ b/tutoring.html
@@ -58,8 +58,8 @@
             </div>
          </div>
          <div class="container">
-            <div class="card mw-100" style="overflow: hidden; min-height: 8rem;">
-               <div id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 8rem;">
+            <div hidden class="card mw-100" style="overflow: hidden; min-height: 8rem;">
+               <div  id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 8rem;">
                   <div class="carousel-indicators" style="margin-bottom: 0.7rem;">
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
                      <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
