--- a/about.html
+++ b/about.html
@@ -115,9 +115,16 @@
                                 <p>
                                     <strong>Daniel</strong>
                                     <br>
-                                    Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of the Computer Security Club. 
-                                    <br><br>
-                                    He has competed in many competitions including winning MIT battlecode, winning $2000 from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
+                                    Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of Thomas Jefferson's Computer Security Club. 
+                                    <br>
+                                    <br>
+                                    Daniel is an experienced competitor and has won many competitions including MIT battlecode, winning $2000 from UMD's high school programming contest, UPenn's Pclassic, Berkley's Calico, etc. He also has an extensive competitive math background including being an AIME qualifier and ARML participant.
+                                    <br>
+                                    <br>
+                                    He also has extensive teaching experience from tutoring at multiple organizations and being chosen by his counselor to tutor computer science to those struggling in CS at TJ.
+                                    <br>
+                                    <br>
+                                    He enjoys playing Tetris and Poker in his free time.
                                 </p>
                             </div>
                         </div>
